# aprog-public

./: .gitattributes  .gitignore  Makefile  README.md  aprog.toml  frob.toml  mypy.ini  pyproject.toml  tickets.md
.github/workflows/: ci.yml  regression.yml  validate-public.yml  verify-full.yml
activities/: CLAUDE.md
activities/adaptor-roundup/: README.md  launch.py
activities/annotation-arsenal/: README.md  launch.py
activities/argv-explorer/: README.md  launch.py
activities/array-foray/: README.md  launch.py
activities/asan-autopsy/: README.md  launch.py
activities/associative-adjudicator/: README.md  launch.py
activities/auto-consequences/: README.md  launch.py
activities/await-tracer/: README.md  launch.py
activities/big-o-lineup/: README.md  launch.py
activities/big5-tracer/: README.md  launch.py
activities/binary-search-autopsy/: README.md  launch.py
activities/binary-stream-explorer/: README.md  launch.py
activities/bit-manipulation-re/: README.md  launch.py
activities/bracket-trap/: README.md  launch.py
activities/broadcast-bureau/: README.md  launch.py
activities/call-stack-autopsy/: README.md  crash_demo.cpp  launch.py
activities/callable-lineup/: README.md  launch.py
activities/capacity-chronicles/: README.md  launch.py
activities/capture-court/: README.md  launch.py
activities/catch2-first-contact/: README.md  launch.py
activities/catch2-tour/: README.md  launch.py
activities/char-by-char/: README.md  launch.py
activities/cli-contract/: README.md  launch.py
activities/client-court/: README.md  launch.py
activities/cmake-heist/: README.md  launch.py
activities/complexity-clock/: README.md  launch.py
activities/comprehension-decathlon/: README.md  launch.py
activities/concurrency-court/: README.md  launch.py
activities/const-contract/: README.md  launch.py
activities/const-maze/: README.md  launch.py
activities/const-refactor/: README.md  launch.py
activities/container-casting-call/: README.md  launch.py
activities/control-gauntlet/: README.md  launch.py
activities/cpp-standards-hunt/: README.md  launch.py
activities/cpp-syntax-boot-camp/: README.md  launch.py
activities/cstring-predictor/: README.md  launch.py
activities/cstring-vs-stdstring/: README.md  launch.py
activities/cstring-whodunit/: README.md  launch.py
activities/ctor-dtor-tracer/: README.md  launch.py
activities/decorator-x-ray/: README.md  launch.py
activities/deduction-detective/: README.md  launch.py
activities/dispatch-detective/: README.md  launch.py
activities/dod-hot-cold/: README.md  launch.py
activities/duck-or-vtable/: README.md  launch.py
activities/dunder-decoder/: README.md  launch.py
activities/dunder-dungeon/: README.md  launch.py
activities/encapsulation-audit/: README.md  launch.py
activities/enum-field-day/: README.md  launch.py
activities/env-setup-build-tools/: README.md  launch.py
activities/env-setup-compiler/: README.md  launch.py
activities/env-setup-discord/: README.md
activities/env-setup-git/: README.md  launch.py
activities/env-setup-ide/: README.md  launch.py
activities/env-setup-python/: README.md  launch.py
activities/env-setup-sfml/: README.md  launch.py
activities/env-setup-shell/: README.md
activities/file-io-contracts/: README.md  launch.py
activities/gdb-time-machine/: README.md  launch.py
activities/git-heist/: README.md  launch.py
activities/git-mental-models/: README.md  launch.py
activities/growth-witness/: README.md  launch.py
activities/gtest-cmake-lab/: README.md  launch.py
activities/gtest-tour/: README.md  launch.py
activities/hiding-hunt/: README.md  launch.py
activities/http-anatomy/: README.md  launch.py
activities/implicit-conversion-minefield/: README.md  launch.py
activities/indentation-court/: README.md  launch.py
activities/index-vs-node/: README.md  launch.py
activities/invalidation-minefield/: README.md  launch.py
activities/invariant-inspector/: README.md  launch.py
activities/iostream-interceptor/: README.md  launch.py
activities/is-a-has-a/: README.md  launch.py
activities/link-tracer/: README.md  (+1 more)
assignments/binary-bounds/visible-tests/: CMakeLists.txt  test_catch.cpp
assignments/fraction-arithmetic/visible-tests/: CMakeLists.txt  test_catch.cpp
assignments/html-parser/assets/: CMakeLists.txt  html_parser.cpp  html_parser.hpp
assignments/html-parser/assets/tests/: test_html_parser.cpp
assignments/html-parser/visible-tests/: CMakeLists.txt  test_visible.cpp
assignments/linked-list-iterators/visible-tests/: CMakeLists.txt  test_catch.cpp
assignments/media-library/visible-tests/: CMakeLists.txt  test_catch.cpp
assignments/pointer-matrix/visible-tests/: CMakeLists.txt  test_catch.cpp  test_visible.cpp
assignments/sfml-canvas/visible-tests/: CMakeLists.txt  test_catch.cpp
assignments/stats-library/assets/: CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md
assignments/stats-library/assets/include/: stats.hpp
assignments/stats-library/assets/scripts/: build.sh
assignments/stats-library/assets/src/statslib/: stats.cpp
assignments/stats-library/assets/src/testing_harness/: harness.hpp
assignments/stats-library/assets/tests/: test_stats.cpp
assignments/tga-processor/visible-tests/: CMakeLists.txt  test_sizes.cpp  test_visible.py
design/: aprog-public.strata
docs/: README.md  course-arc.md  curriculum-map.md  readme-style.md
examples/assignments/cpp-linked-list/grader/: CMakeLists.txt  main.cpp  pipeline.py
examples/assignments/cpp-linked-list/visible-tests/: CMakeLists.txt  test_catch.cpp
examples/template-demos/caesar-cipher-staging/grader/: CMakeLists.txt  pipeline.py
examples/template-demos/cpp-bst-staging/grader/: CMakeLists.txt  main.cpp  pipeline.py
examples/template-demos/matrix-class-public/visible-tests/: CMakeLists.txt  test_catch.cpp
examples/template-demos/matrix-class-staging/grader/: CMakeLists.txt  pipeline.py
examples/template-demos/reverse-string-staging/grader/: CMakeLists.txt  pipeline.py
scripts/: verify-in-tmp.sh
tests/: test_design_model.py
(+683 files in other folders)
